# llm-bench

./: .gitignore  README.md  pyproject.toml
examples/: quickstart.py
src/llm_bench/: __init__.py  __main__.py  analyze.py  cli.py  client.py  configs.py  runner.py  scheduler.py  selector.py  setup_wizard.py  types.py
src/llm_bench/dashboard/: __init__.py  app.py
src/llm_bench/dashboard/static/: benchmark.html
src/llm_bench/storage/: __init__.py  base.py  json_file.py  sqlite.py
src/llm_bench/training/: __init__.py  distill.py  export.py  predictor.py  router.py
tests/: test_analyze.py  test_configs.py  test_storage.py  test_training.py  test_types.py
