[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-bench"
version = "0.1.0"
description = "Benchmark LLM models on quality-per-cost and auto-select the optimal model per task"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jig" }]
keywords = ["llm", "benchmark", "model-selection", "pareto", "openrouter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
postgres = ["sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0"]
train = ["scikit-learn>=1.3.0", "sentence-transformers>=2.0.0", "joblib>=1.3.0"]
train-deep = ["transformers>=4.30.0", "datasets>=2.0.0", "torch>=2.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.1.0"]

[project.scripts]
llm-bench = "llm_bench.cli:main"

[project.urls]
Homepage = "https://github.com/groseries/llm-bench"
Issues = "https://github.com/groseries/llm-bench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bench"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
